2008-02-21  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/lists/index.xml:
	Add the gstreamer-embedded mailing list to the rank.

2008-02-21  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-bad/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-bad/Makefile.am:
	* src/htdocs/releases/gst-plugins-good/0.10.6.xml:
	* src/htdocs/releases/gst-plugins-good/0.10.7.xml:
	* src/htdocs/releases/gst-plugins-good/Makefile.am:
	* src/htdocs/releases/gst-plugins-ugly/0.10.7.xml:
	* src/htdocs/releases/gst-plugins-ugly/Makefile.am:

	Release Good 0.10.7, Bad 0.10.6, Ugly 0.10.7

2008-01-31  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Fix the spelling of '&amp;'

2008-01-30  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Add a little extra note about not using 0.10.16 releases...

2008-01-30  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/news/news.xml:
	Fix date in the new announcement...

2008-01-30  Jan Schmidt  <jan.schmidt@sun.com>

	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.17.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.17.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	Announce 0.10.17 core & base paper bags

2008-01-28  Jan Schmidt  <jan.schmidt@sun.com>

	* bin/new-release:
	* src/htdocs/entities.gst:
	* src/htdocs/news/news.xml:
	* src/htdocs/releases/gst-plugins-base/0.10.16.xml:
	* src/htdocs/releases/gst-plugins-base/Makefile.am:
	* src/htdocs/releases/gst-python/0.10.10.xml:
	* src/htdocs/releases/gst-python/Makefile.am:
	* src/htdocs/releases/gstreamer/0.10.16.xml:
	* src/htdocs/releases/gstreamer/Makefile.am:
	Announce releases of core 0.10.16, base 0.10.16 and python 0.10.10

2008-01-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/apps/index.xml:
	  Wikipedia says the site has moved.  Wikipedia! Boggle.