@@ -10,6 +10,9 @@
     <component>gstreamer+%28core%29</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.19</milestone>
+      <milestone>0.10.18</milestone>
+      <milestone>0.10.17</milestone>
       <milestone>0.10.16</milestone>
       <milestone>0.10.15</milestone>
       <milestone>0.10.14</milestone>
@@ -65,6 +68,9 @@
     <component>gst-plugins-base</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.19</milestone>
+      <milestone>0.10.18</milestone>
+      <milestone>0.10.17</milestone>
       <milestone>0.10.16</milestone>
       <milestone>0.10.15</milestone>
       <milestone>0.10.14</milestone>
@@ -96,6 +102,7 @@
     <component>gst-plugins-good</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.8</milestone>
       <milestone>0.10.7</milestone>
       <milestone>0.10.6</milestone>
       <milestone>0.10.5</milestone>
@@ -118,6 +125,7 @@
     <component>gst-plugins-ugly</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.8</milestone>
       <milestone>0.10.7</milestone>
       <milestone>0.10.6</milestone>
       <milestone>0.10.5</milestone>
@@ -140,6 +148,7 @@
     <component>gst-plugins-bad</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.7</milestone>
       <milestone>0.10.6</milestone>
       <milestone>0.10.5</milestone>
       <milestone>0.10.4</milestone>
@@ -176,6 +185,7 @@
     <component>gst-python</component>
     <milestones>
       <milestone>HEAD</milestone>
+      <milestone>0.10.11</milestone>
       <milestone>0.10.10</milestone>
       <milestone>0.10.9</milestone>
       <milestone>0.10.8</milestone>
